--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+html,
+body {
+  height: 100%;
+}
+
+#root {
+  display: grid;
+  grid-template-rows: auto 1fr ;
+  min-height: 100%;
+}
+
 .App {
   text-align: center;
 }
